# adv_mla_lab_1

./: pyproject.toml  requirements.txt
adv_mla_lab_1/: Makefile  pyproject.toml
adv_mla_lab_1/notebooks/: 1_baseline.ipynb  2_rf.ipynb
