[project]
name = "adv-mla-lab-1"
version = "0.1.0"
description = ""
authors = [
    {name = "marubianor1",email = "marubianor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter-data-science (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
